# Rocket_Casbin_Demo

./: .env  Cargo.toml  README.md  Rocket.toml
casbin_conf/: policy.csv
db/: casbin.sqlite  user.sqlite
src/: main.rs
