[package]
name = "rocket_casbin"
version = "0.1.0"
authors = ["zengl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="init_db"

[[bin]]
name="orm_adapter"

[[bin]]
name="file_adapter"

[dependencies]
rocket = { version="0.4.5", features=["private-cookies"] }
rocket_contrib = {version="0.4.5", features=["diesel_sqlite_pool"]}
casbin = { version = "1.1.2", default-features = false, features = [ "runtime-tokio", "incremental", "cached"] }
tokio = { version = "0.2", default-features = false, features = ["stream", "rt-core"] }

diesel-adapter = { git="http://192.168.1.103:8082/simoon/diesel-adapter.git", default-features = false, features=["sqlite", "runtime-tokio"] }
